[project]
name = "calendlam"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Stribrny",email = "jakub.stribrny@datasentics.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "weasyprint (>=67.0,<68.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "calendlam", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
